--- a/15_11_2021.css
+++ b/15_11_2021.css
@@ -11,4 +11,7 @@
            background-color: lightgrey;
            font-weight: bold;
         }
-      
+
+        ul {
+           list-style-type: square;
+        }
