--- a/15_11_2021.css
+++ b/15_11_2021.css
@@ -25,6 +25,7 @@
         li:first-child {
            border: thick solid green;
            margin-top: 1em;
+           margin-bottom: 1em;
            padding: 1ex;
            width: 40%;
 
