CSS rules updated.

--- a/15_11_2021.css
+++ b/15_11_2021.css
@@ -24,6 +24,7 @@
         }
         li:first-child {
            border: thick solid green;
+           margin-bottom: 1em;
            margin-top: 1em;
            padding: 1ex;
            width: 40%;
